# ChangeLog for sci-libs/dealii
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Jul 2015; Matthias Maier <tamiko@gentoo.org> dealii-9999.ebuild:
  sci-libs/dealii - change the recorded version and soversion in the live build

  06 Jun 2015; Justin Lecher <jlec@gentoo.org> dealii-8.1.0-r2.ebuild,
  dealii-8.2.1-r1.ebuild, dealii-9999.ebuild:
  sci-libs/dealii: Add SLOT operators

  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  sci-libs/dealii: Add github to remote-id in metadata.xml

*dealii-8.2.1-r1 (28 Mar 2015)

  28 Mar 2015; Matthias Maier <tamiko@gentoo.org> +dealii-8.2.1-r1.ebuild,
  -dealii-8.2.1.ebuild, dealii-8.1.0-r2.ebuild, dealii-8.2.0.ebuild,
  dealii-9999.ebuild:
  sci-libs/dealii: Ebuild maintenance, remove wrong avx2 use flag

  29 Jan 2015; Matthias Maier <tamiko@gentoo.org> dealii-8.1.0-r2.ebuild,
  dealii-8.2.1.ebuild, dealii-9999.ebuild, metadata.xml:
  Convert to CPU_FLAGS_X86

  21 Jan 2015; Matthias Maier <tamiko@gentoo.org> dealii-9999.ebuild:
  sci-libs/dealii - fix typo in live ebuild

  21 Jan 2015; Matthias Maier <tamiko@gentoo.org> dealii-9999.ebuild:
  sci-libs/dealii - update live ebuild

*dealii-8.2.1 (14 Jan 2015)

  14 Jan 2015; Matthias Maier <tamiko@gentoo.org> +dealii-8.2.1.ebuild,
  dealii-8.2.0.ebuild, dealii-9999.ebuild:
  sci-libs/dealii - version bump; update live build

  24 Dec 2014; Matthias Maier <tamiko@gentoo.org> dealii-9999.ebuild:
  fix installation

*dealii-8.1.0-r2 (24 Dec 2014)
*dealii-8.2.0_rc2 (24 Dec 2014)

  24 Dec 2014; Matthias Maier <tamiko@gentoo.org> +dealii-8.1.0-r2.ebuild,
  +dealii-8.2.0_rc2.ebuild, -dealii-8.1.0-r1.ebuild, dealii-9999.ebuild,
  metadata.xml:
  version bump; ebuild maintenance; fix SRC_URI

*dealii-8.1.0-r1 (14 Oct 2014)

  14 Oct 2014; Matthias Maier <tamiko@gentoo.org> +dealii-8.1.0-r1.ebuild,
  +files/dealii-8.1.0-p4est1.0-support.patch, -dealii-8.0.0.ebuild,
  -dealii-8.1.0.ebuild:
  fix p4est dependency; drop old
