@@ -4,3 +4,5 @@ DIST dealii-8.2.0-offline_documentation.tar.gz 100812912 SHA256 90097f935731c418
 DIST dealii-8.2.0.tar.gz 13666090 SHA256 a6f136c59a6b1c0789ea1692b7429a56e4fc3272a6e5079c08cdb3f5e24f982c SHA512 040056258f2c00d0ebae044011e851ab120432298dccda63a4853653c8c0839b7562e71a7ac37513d71f4eff319f57a61ed7189c564a9ba2936870266ac0470f WHIRLPOOL bcb1e0f478bb7baaa492b78e1d0062d84faef275cd0e82b1889867d6f6e49658fd6da5ec2ead8038f224562877166f778408e4462bb262038de4e2c7e95fe6ec
 DIST dealii-8.2.1-offline_documentation.tar.gz 98861605 SHA256 4622e8ef96c5105dc9cf6e35c54a6fd072956235320646c4f53b5def7748b2fd SHA512 721d963991d53f2c23010f6c398cddd9e058385375a3a77245fbe95b10dbfe1a452d1c2ead2cb8d8a0174b0b2262ed40832f100a545af49dc923d19f42e8e283 WHIRLPOOL 5a1d070d8336c9d9a3a582a73457fa1831f737ecd5def1787bcbffef30f718eef03c57c58ea80e79d6735b73d6f8c83d498a366f002fa5078ef51c71af74b2f9
 DIST dealii-8.2.1.tar.gz 13667634 SHA256 d75674e45fe63cd9fa294460fe45228904d51a68f744dbb99cd7b60720f3b2a0 SHA512 9cd3ed9a4330aa7464ecfe92677fcddae0aadcca7885c898eb8a746caa30fff587ccf5614cec61ffb6b27280c94b423d6370661a1791c601d7abce163502daeb WHIRLPOOL d7b86adcf7dc5dddf63aac4d37be6512aff9889279eb58f9d79cbc5d0c467a1ba50892a08495057f20a3352767f88a42bff7d82f9ba2b5567b02511cb806b7f5
+DIST dealii-8.3.0-offline_documentation.tar.gz 152228920 SHA256 474b1b64a392b1a77b3e628b4c5f83099ed3b4cd5bc87966454645607f2f3851 SHA512 f3ba395204b18b9b8a0e5a1ea0d59260f3ed556d866820c78ed52d9fd16cc4702870eec9bfa0a3e6996696256f6d371d88a9642392eab135291f6a2411038c48 WHIRLPOOL aabcb6b951f1331fbf1cc0cef3f9dc92f8f4c08698f6ddbafff9b5a59d4344bab75346d353cb9b4582e8233230598501d13eecfa021a52e5692fcd3849581ba0
+DIST dealii-8.3.0.tar.gz 13756656 SHA256 4ddf72632eb501e1c814e299f32fc04fd680d6fda9daff58be4209e400e41779 SHA512 bc8aa46e91d3ae600cda8e0069a41a8172845d4e2026c05d361fc47a2780365a1510edbfd04a94a6b509e30b8c153ff41c0abd46403cba1ef134e6898b1f53ca WHIRLPOOL db350cfd43f84405d9fc297299b6015aac5c40ddc8a55991e0f42a3ea0b0375162320c024b7b2441ebf562509149a7c9154cb10ace3c70548aed30c66399d82f
